--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rcalheatmap
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Marcio", "Nicolau", email = "marcionicolau@me.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph)
-Depends: R (>= 3.2.0)
-License: What license is it under?
+Depends: R (>= 3.2.0), htmlwidgets
+License: GPL (>= 2)
 LazyData: true
